feat: Add Life in USA page with comprehensive living information
## 사용자 요청
- https://www.studyinkorea.go.kr/ko/life/main.do 페이지를 참고하여 Life in USA 페이지 구현

## 구현 내용

### 1. 새로운 페이지 생성
- src/pages/LifeInUSA.tsx 컴포넌트 생성
- 6가지 주요 생활 정보 카테고리 구현
- 추가 정보, 스토리, 태그, 빠른 링크 섹션 추가

### 2. 페이지 구조
**Hero Section**:
- 안전한 환경 배지
- Life in USA 소개
- 범죄율 낮은 안전한 국가 강조

**Main Categories (6개)**:
1. 🛫 USA Immigration Procedures - 입국 수속 정보
2. 🏠 Living & Housing Information - 주거 및 생활 정보
3. 📍 USA Regional Introduction - 지역 소개
4. 💰 Living Costs & Expenses - 생활비 및 경비
5. 📄 Residence Status & Duration - 거주 자격 및 체류 기간
6. ⚖️ Living Legal Information - 생활 법령 정보

**Additional Info (3개)**:
- 장학금 지원 정보 (Plan Studies 링크)
- AI 온라인 상담 (Chat 링크)
- 대학/학과 찾기

**Stories (3개 비디오)**:
- Daily Life Vlog - 일상 생활
- Budget Saving Tips - 생활비 절약 팁
- Travel Experiences - 여행 경험

**Tags Section**:
- #유학생활Vlog
- #생활비절약팁
- #캠퍼스생활
- #도시가이드

**Quick Links (4개)**:
- 대학 찾기
- 장학금
- 온라인 신청
- 가이드북

**CTA Section**:
- 유학 계획하기 버튼
- 질문하기 버튼

### 3. 디자인 특징
**LifeCard 컴포넌트**:
- 재사용 가능한 카드 컴포넌트
- 카테고리별 그라데이션 배경
  - 파란색: Immigration
  - 녹색: Housing
  - 보라색: Regions
  - 호박색: Living Costs
  - 청록색: Stay Duration
  - 남색: Legal Info
- 아이콘 회전 애니메이션 (hover 시)
- 그림자 및 변형 효과

**반응형 디자인**:
- 1/2/3 컬럼 그리드 레이아웃
- 모바일 우선 접근
- 터치 친화적 인터페이스

**시각적 요소**:
- Shield 배지 아이콘
- 카테고리별 Lucide 아이콘
- 그리드 패턴 배경
- 부드러운 그라데이션

### 4. 다국어 지원 (13개 언어)
모든 언어 파일에 lifeInUSA 섹션 추가:
- ✅ en, ko: 영어, 한국어
- ✅ zh, ja: 중국어, 일본어
- ✅ vi, mn: 베트남어, 몽골어
- ✅ ar, hi: 아랍어, 힌디어
- ✅ es, fr: 스페인어, 프랑스어
- ✅ de, ru: 독일어, 러시아어
- ✅ th: 태국어

### 5. 라우팅 및 네비게이션
- App.tsx: /life-in-usa 라우트 추가
- Header.tsx: Life in USA 링크 활성화
- 메가 메뉴와 통합

### 6. 컴포넌트 통합
**외부 링크**:
- Plan Studies 장학금 섹션
- AI Chat 상담

**YouTube 비디오**:
- 임베드 형식
- 반응형 aspect-video
- 호버 효과

**Badge 컴포넌트**:
- 태그 표시
- outline variant
- 호버 시 색상 전환

### 7. 접근성
- semantic HTML 구조
- ARIA 레이블 지원
- 키보드 네비게이션
- 스크린 리더 친화적

## 기술 스택
- React + TypeScript
- react-i18next (다국어)
- react-router-dom (라우팅)
- lucide-react (아이콘)
- shadcn/ui (Card, Bu

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -260,5 +260,94 @@
       "getStarted": "البدء",
       "askQuestions": "اطرح الأسئلة"
     }
+  },
+  "lifeInUSA": {
+    "hero": {
+      "badge": "بيئة آمنة ومرحبة",
+      "title": "الحياة في الولايات المتحدة",
+      "subtitle": "الولايات المتحدة بلد آمن بمعدلات جريمة منخفضة، توفر بيئة آمنة للطلاب الدوليين.",
+      "description": "اكتشف كل ما تحتاج معرفته حول العيش في الولايات المتحدة كطالب دولي."
+    },
+    "sections": {
+      "lifeInUSA": "الحياة في الولايات المتحدة",
+      "subtitle": "معلومات أساسية لتجربة دراسية ناجحة بالخارج",
+      "additionalInfo": "المزيد من معلومات الدراسة بالخارج",
+      "stories": "القصص",
+      "storiesSubtitle": "تجارب حقيقية من الطلاب الدوليين",
+      "tags": "المواضيع الشائعة",
+      "quickMore": "وصول سريع"
+    },
+    "categories": {
+      "immigration": {
+        "title": "إجراءات الهجرة إلى الولايات المتحدة",
+        "desc": "من قبل المغادرة إلى الوصول إلى المطار، تحقق من جميع الإجراءات والقوائم المرجعية الضرورية على Study in USA."
+      },
+      "housing": {
+        "title": "معلومات المعيشة والسكن",
+        "desc": "حياة دراسية ذكية في الولايات المتحدة - تحقق من معلومات المعيشة الأساسية وخطط مسبقًا."
+      },
+      "regions": {
+        "title": "مقدمة إقليمية عن الولايات المتحدة",
+        "desc": "مدن رائعة للدراسة في الولايات المتحدة - اختبر ثقافات مجتمعية إقليمية فريدة."
+      },
+      "livingCosts": {
+        "title": "تكاليف المعيشة والنفقات",
+        "desc": "حياة دراسية بالخارج تنمو من خلال تجارب متنوعة - وفر التكاليف بينما تقضي وقتًا مفيدًا."
+      },
+      "stayDuration": {
+        "title": "حالة الإقامة والمدة",
+        "desc": "تحقق من معلومات الهجرة من التسجيل كأجنبي إلى تغييرات مدة الإقامة هنا."
+      },
+      "legalInfo": {
+        "title": "معلومات قانونية للمعيشة",
+        "desc": "معلومات قانونية يجب أن يعرفها الطلاب الدوليون حول الحياة في الولايات المتحدة وأنظمة الدعم المتاحة."
+      }
+    },
+    "additional": {
+      "scholarships": {
+        "title": "دعم المنح الدراسية المتنوعة",
+        "desc": "تحقق من المنح الحكومية للطلاب الدوليين والمنح من الشركات والمدارس."
+      },
+      "consultation": {
+        "title": "استشارة الذكاء الاصطناعي عبر الإنترنت",
+        "desc": "نجيب على استفساراتك بسرعة."
+      },
+      "findSchool": {
+        "title": "ابحث عن القسم والجامعة",
+        "desc": "ابحث حسب اسم الجامعة أو التخصص للعثور على معلومات المدرسة في لمحة."
+      }
+    },
+    "stories": {
+      "dailyLife": {
+        "title": "فيديو الحياة اليومية",
+        "desc": "الفصول الحقيقية والأيام المزدحمة التي تمر أكثر قيمة من أي شيء."
+      },
+      "budgetTips": {
+        "title": "نصائح لتوفير الميزانية",
+        "desc": "تعلم كيفية التوفير على نفقات المعيشة أثناء الدراسة بالخارج."
+      },
+      "travelExperience": {
+        "title": "أفضل وجهات السفر",
+        "desc": "كبار السن يشاركون تجارب الثقافة الأمريكية - المناظر الطبيعية الجميلة تقدم شيئًا مميزًا."
+      }
+    },
+    "tags": {
+      "studentVlog": "فيديو حياة الطالب",
+      "budgetTips": "نصائح توفير الميزانية",
+      "campusLife": "الحياة الجامعية",
+      "cityGuide": "دليل المدينة"
+    },
+    "quickLinks": {
+      "findSchool": "ابحث عن معلومات الجامعة والقسم",
+      "scholarships": "ابحث عن المنح الدراسية المتاحة",
+      "onlineApplication": "قدم عبر الإنترنت بسهولة",
+      "guidebook": "قم بتنزيل الدليل الأساسي"
+    },
+    "cta": {
+      "title": "هل أنت مستعد لتجربة الحياة في الولايات المتحدة؟",
+      "description": "ابدأ رحلتك بدعم وإرشاد كامل",
+      "planStudies": "خطط دراستك",
+      "askQuestions": "اطرح الأسئلة"
+    }
   }
 }
