--- a/src/i18n/locales/mn.json
+++ b/src/i18n/locales/mn.json
@@ -270,5 +270,94 @@
       "getStarted": "Эхлүүлэх",
       "askQuestions": "Асуулт асуух"
     }
+  },
+  "lifeInUSA": {
+    "hero": {
+      "badge": "Аюулгүй & Дотно Орчин",
+      "title": "АНУ дахь амьдрал",
+      "subtitle": "АНУ нь гэмт хэрэг багатай аюулгүй улс бөгөөд олон улсын оюутнуудад найдвартай орчин бүрдүүлдэг.",
+      "description": "Олон улсын оюутны хувьд АНУ-д амьдрах талаар мэдэх ёстой бүх зүйлийг олж мэдээрэй."
+    },
+    "sections": {
+      "lifeInUSA": "АНУ дахь амьдрал",
+      "subtitle": "Амжилттай гадаад суралцах туршлагад шаардлагатай мэдээлэл",
+      "additionalInfo": "Гадаад суралцах нэмэлт мэдээлэл",
+      "stories": "Түүхүүд",
+      "storiesSubtitle": "Олон улсын оюутнуудын бодит туршлага",
+      "tags": "Алдартай сэдвүүд",
+      "quickMore": "Шуурхай хандалт"
+    },
+    "categories": {
+      "immigration": {
+        "title": "АНУ-ын нүүн шилжих хэргийн журам",
+        "desc": "Явахын өмнөөс нисэх буудалд ирэх хүртэл, Study in USA дээр бүх шаардлагатай журам болон шалгах жагсаалтыг шалгаарай."
+      },
+      "housing": {
+        "title": "Амьдрал & Орон сууцны мэдээлэл",
+        "desc": "Ухаалаг АНУ-д суралцах амьдрал - зайлшгүй шаардлагатай амьдралын мэдээллийг шалгаж урьдчилан төлөвлөөрэй."
+      },
+      "regions": {
+        "title": "АНУ-ын бүс нутгийн танилцуулга",
+        "desc": "АНУ-д суралцахад тохиромжтой гайхалтай хотууд - өвөрмөц бүс нутгийн нийгэмлэгийн соёлыг мэдрээрэй."
+      },
+      "livingCosts": {
+        "title": "Амьжиргааны зардал & Зарцуулалт",
+        "desc": "Олон янзын туршлагаар өсөн дэвшдэг гадаад суралцах амьдрал - утга учиртай цаг заваа өнгөрүүлэхийн зэрэгцээ зардлаа хэмнэж аваарай."
+      },
+      "stayDuration": {
+        "title": "Оршин суух статус & Хугацаа",
+        "desc": "Гадаад иргэний бүртгэлээс эхлээд оршин суух хугацааны өөрчлөлт хүртэл нүүн шилжих хэргийн мэдээллийг энд шалгаарай."
+      },
+      "legalInfo": {
+        "title": "Амьдралын хууль эрх зүйн мэдээлэл",
+        "desc": "Олон улсын оюутнууд АНУ-ын амьдралын талаар мэдэх ёстой хууль эрх зүйн мэдээлэл болон боломжтой дэмжлэгийн системүүд."
+      }
+    },
+    "additional": {
+      "scholarships": {
+        "title": "Олон төрлийн тэтгэлгийн дэмжлэг",
+        "desc": "Олон улсын оюутнуудад зориулсан засгийн газрын тэтгэлэг болон компани, сургуулиудын тэтгэлгүүдийг шалгаарай."
+      },
+      "consultation": {
+        "title": "AI Онлайн Зөвлөгөө",
+        "desc": "Бид таны асуулгад хурдан хариулдаг."
+      },
+      "findSchool": {
+        "title": "Тэнхим & Их сургууль олох",
+        "desc": "Их сургууль эсвэл мэргэжлийн нэрээр хайж сургуулийн мэдээллийг нэгэн зэрэг олоорой."
+      }
+    },
+    "stories": {
+      "dailyLife": {
+        "title": "Өдөр тутмын амьдралын влог",
+        "desc": "Бодит хичээлүүд болон завгүй өнгөрөх өдрүүд ямар ч зүйлээс илүү үнэ цэнэтэй."
+      },
+      "budgetTips": {
+        "title": "Төсөв хэмнэх зөвлөмжүүд",
+        "desc": "Гадаад суралцах явцдаа амьжиргааны зардлыг хэрхэн хэмнэх талаар сураарай."
+      },
+      "travelExperience": {
+        "title": "Хамгийн сайн аялалын газрууд",
+        "desc": "Ахлах оюутнууд АНУ-ын соёлын туршлагаа хуваалцдаг - үзэсгэлэнт байгаль онцгой зүйлийг санал болгодог."
+      }
+    },
+    "tags": {
+      "studentVlog": "Оюутны амьдралын влог",
+      "budgetTips": "Төсөв хэмнэх зөвлөмжүүд",
+      "campusLife": "Кампусын амьдрал",
+      "cityGuide": "Хотын гарын авлага"
+    },
+    "quickLinks": {
+      "findSchool": "Их сургууль & тэнхимийн мэдээлэл олох",
+      "scholarships": "Боломжтой тэтгэлэгүүдийг олох",
+      "onlineApplication": "Онлайнаар хялбархан өргөдөл гаргах",
+      "guidebook": "Зайлшгүй гарын авлагыг татаж авах"
+    },
+    "cta": {
+      "title": "АНУ-ын амьдралыг мэдрэхэд бэлэн үү?",
+      "description": "Бүрэн дэмжлэг, удирдамжтайгаар аялалаа эхлүүлээрэй",
+      "planStudies": "Сургуулиа төлөвлөх",
+      "askQuestions": "Асуулт асуух"
+    }
   }
 }
