--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -260,5 +260,94 @@
       "getStarted": "Начать",
       "askQuestions": "Задать вопросы"
     }
+  },
+  "lifeInUSA": {
+    "hero": {
+      "badge": "Безопасная и Гостеприимная Среда",
+      "title": "Жизнь в США",
+      "subtitle": "США - это безопасная страна с низким уровнем преступности, обеспечивающая безопасную среду для иностранных студентов.",
+      "description": "Узнайте всё, что нужно знать о жизни в Соединённых Штатах в качестве иностранного студента."
+    },
+    "sections": {
+      "lifeInUSA": "Жизнь в США",
+      "subtitle": "Важная информация для успешного обучения за рубежом",
+      "additionalInfo": "Дополнительная информация об обучении за рубежом",
+      "stories": "Истории",
+      "storiesSubtitle": "Реальный опыт иностранных студентов",
+      "tags": "Популярные Темы",
+      "quickMore": "Быстрый Доступ"
+    },
+    "categories": {
+      "immigration": {
+        "title": "Иммиграционные процедуры США",
+        "desc": "От подготовки к отъезду до прибытия в аэропорт - проверьте все необходимые процедуры и контрольные списки на Study in USA."
+      },
+      "housing": {
+        "title": "Информация о проживании и жилье",
+        "desc": "Умная жизнь во время учёбы в США - проверьте основную информацию о проживании и спланируйте заранее."
+      },
+      "regions": {
+        "title": "Знакомство с регионами США",
+        "desc": "Отличные города для учёбы в США - познайте уникальные региональные культуры сообществ."
+      },
+      "livingCosts": {
+        "title": "Расходы на проживание и затраты",
+        "desc": "Жизнь студента за рубежом, которая растёт через разнообразный опыт - экономьте затраты, проводя время с пользой."
+      },
+      "stayDuration": {
+        "title": "Статус проживания и продолжительность",
+        "desc": "Проверьте здесь иммиграционную информацию от регистрации иностранца до изменений срока пребывания."
+      },
+      "legalInfo": {
+        "title": "Юридическая информация о проживании",
+        "desc": "Юридическая информация, которую иностранные студенты должны знать о жизни в США и доступных системах поддержки."
+      }
+    },
+    "additional": {
+      "scholarships": {
+        "title": "Различная стипендиальная поддержка",
+        "desc": "Проверьте государственные стипендии для иностранных студентов, а также стипендии от компаний и школ."
+      },
+      "consultation": {
+        "title": "Онлайн-консультация с ИИ",
+        "desc": "Мы быстро отвечаем на ваши запросы."
+      },
+      "findSchool": {
+        "title": "Найти факультет и университет",
+        "desc": "Ищите по названию университета или специальности, чтобы найти информацию о школе с первого взгляда."
+      }
+    },
+    "stories": {
+      "dailyLife": {
+        "title": "Влог о повседневной жизни",
+        "desc": "Реальные занятия и насыщенные дни ценнее всего остального."
+      },
+      "budgetTips": {
+        "title": "Советы по экономии бюджета",
+        "desc": "Узнайте, как экономить на расходах на проживание во время учёбы за рубежом."
+      },
+      "travelExperience": {
+        "title": "Лучшие туристические направления",
+        "desc": "Выпускники делятся опытом знакомства с американской культурой - красивые пейзажи предлагают что-то особенное."
+      }
+    },
+    "tags": {
+      "studentVlog": "Влог студенческой жизни",
+      "budgetTips": "Советы по экономии бюджета",
+      "campusLife": "Жизнь в кампусе",
+      "cityGuide": "Городской гид"
+    },
+    "quickLinks": {
+      "findSchool": "Найти информацию об университете и факультете",
+      "scholarships": "Найти доступные стипендии",
+      "onlineApplication": "Легко подать заявку онлайн",
+      "guidebook": "Скачать необходимый справочник"
+    },
+    "cta": {
+      "title": "Готовы испытать жизнь в США?",
+      "description": "Начните своё путешествие с полной поддержкой и руководством",
+      "planStudies": "Спланировать учёбу",
+      "askQuestions": "Задать вопросы"
+    }
   }
 }
