--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -260,5 +260,94 @@
       "getStarted": "เริ่มต้น",
       "askQuestions": "ถามคำถาม"
     }
+  },
+  "lifeInUSA": {
+    "hero": {
+      "badge": "สภาพแวดล้อมที่ปลอดภัยและเป็นมิตร",
+      "title": "ชีวิตในสหรัฐฯ",
+      "subtitle": "สหรัฐอเมริกาเป็นประเทศที่ปลอดภัยด้วยอัตราอาชญากรรมที่ต่ำ และมอบสภาพแวดล้อมที่ปลอดภัยสำหรับนักเรียนต่างชาติ",
+      "description": "ค้นพบทุกสิ่งที่คุณต้องรู้เกี่ยวกับการใช้ชีวิตในสหรัฐอเมริกาในฐานะนักเรียนต่างชาติ"
+    },
+    "sections": {
+      "lifeInUSA": "ชีวิตในสหรัฐฯ",
+      "subtitle": "ข้อมูลสำคัญสำหรับประสบการณ์การเรียนต่อต่างประเทศที่ประสบความสำเร็จ",
+      "additionalInfo": "ข้อมูลเพิ่มเติมเกี่ยวกับการเรียนต่อต่างประเทศ",
+      "stories": "เรื่องราว",
+      "storiesSubtitle": "ประสบการณ์จริงจากนักเรียนต่างชาติ",
+      "tags": "หัวข้อยอดนิยม",
+      "quickMore": "เข้าถึงอย่างรวดเร็ว"
+    },
+    "categories": {
+      "immigration": {
+        "title": "ขั้นตอนการเข้าเมืองสหรัฐฯ",
+        "desc": "ตั้งแต่การเตรียมตัวก่อนเดินทางไปจนถึงการมาถึงสนามบิน ตรวจสอบขั้นตอนและรายการตรวจสอบที่จำเป็นทั้งหมดใน Study in USA"
+      },
+      "housing": {
+        "title": "ข้อมูลการใช้ชีวิตและที่พัก",
+        "desc": "ชีวิตการเรียนต่อในสหรัฐฯ อย่างชาญฉลาด - ตรวจสอบข้อมูลการใช้ชีวิตที่จำเป็นและวางแผนล่วงหน้า"
+      },
+      "regions": {
+        "title": "แนะนำภูมิภาคของสหรัฐฯ",
+        "desc": "เมืองที่ยอดเยี่ยมสำหรับการศึกษาในสหรัฐฯ - สัมผัสวัฒนธรรมชุมชนในภูมิภาคที่เป็นเอกลักษณ์"
+      },
+      "livingCosts": {
+        "title": "ค่าใช้จ่ายในการดำรงชีวิตและค่าใช้จ่าย",
+        "desc": "ชีวิตการเรียนต่อต่างประเทศที่เติบโตผ่านประสบการณ์ที่หลากหลาย - ประหยัดค่าใช้จ่ายในขณะที่ใช้เวลาอย่างมีความหมาย"
+      },
+      "stayDuration": {
+        "title": "สถานะการพำนักและระยะเวลา",
+        "desc": "ตรวจสอบข้อมูลการเข้าเมืองตั้งแต่การลงทะเบียนคนต่างด้าวจนถึงการเปลี่ยนแปลงระยะเวลาพำนักที่นี่"
+      },
+      "legalInfo": {
+        "title": "ข้อมูลทางกฎหมายเกี่ยวกับการใช้ชีวิต",
+        "desc": "ข้อมูลทางกฎหมายที่นักเรียนต่างชาติควรรู้เกี่ยวกับชีวิตในสหรัฐฯ และระบบสนับสนุนที่มีอยู่"
+      }
+    },
+    "additional": {
+      "scholarships": {
+        "title": "การสนับสนุนทุนการศึกษาที่หลากหลาย",
+        "desc": "ตรวจสอบทุนการศึกษาจากรัฐบาลสำหรับนักเรียนต่างชาติและทุนการศึกษาจากบริษัทและโรงเรียน"
+      },
+      "consultation": {
+        "title": "ให้คำปรึกษาออนไลน์ด้วย AI",
+        "desc": "เราตอบคำถามของคุณอย่างรวดเร็ว"
+      },
+      "findSchool": {
+        "title": "ค้นหาภาควิชาและมหาวิทยาลัย",
+        "desc": "ค้นหาตามชื่อมหาวิทยาลัยหรือสาขาวิชาเพื่อค้นหาข้อมูลโรงเรียนได้ในทันที"
+      }
+    },
+    "stories": {
+      "dailyLife": {
+        "title": "วล็อกชีวิตประจำวัน",
+        "desc": "ห้องเรียนจริงและวันที่วุ่นวายที่ผ่านไปมีค่ามากกว่าสิ่งใด"
+      },
+      "budgetTips": {
+        "title": "เคล็ดลับการประหยัดงบประมาณ",
+        "desc": "เรียนรู้วิธีประหยัดค่าใช้จ่ายในการดำรงชีวิตขณะเรียนต่อต่างประเทศ"
+      },
+      "travelExperience": {
+        "title": "จุดหมายปลายทางท่องเที่ยวที่ดีที่สุด",
+        "desc": "รุ่นพี่แบ่งปันประสบการณ์วัฒนธรรมสหรัฐฯ - ทิวทัศน์ที่สวยงามมอบสิ่งพิเศษ"
+      }
+    },
+    "tags": {
+      "studentVlog": "วล็อกชีวิตนักเรียน",
+      "budgetTips": "เคล็ดลับการประหยัดงบประมาณ",
+      "campusLife": "ชีวิตในมหาวิทยาลัย",
+      "cityGuide": "คู่มือเมือง"
+    },
+    "quickLinks": {
+      "findSchool": "ค้นหาข้อมูลมหาวิทยาลัยและภาควิชา",
+      "scholarships": "ค้นหาทุนการศึกษาที่มีอยู่",
+      "onlineApplication": "สมัครออนไลน์ได้อย่างง่ายดาย",
+      "guidebook": "ดาวน์โหลดคู่มือที่จำเป็น"
+    },
+    "cta": {
+      "title": "พร้อมที่จะสัมผัสชีวิตในสหรัฐฯ แล้วหรือยัง?",
+      "description": "เริ่มต้นการเดินทางของคุณด้วยการสนับสนุนและคำแนะนำที่สมบูรณ์",
+      "planStudies": "วางแผนการศึกษาของคุณ",
+      "askQuestions": "ถามคำถาม"
+    }
   }
 }
